@@ -1,5 +1,5 @@
 == Priority
-* Introduce three-state checkbox for SearchPanel
+* Introduce three-state checkbox for SearchPanel - DONE
 * Add icons to buttons to actions (toolbars/menus)
 * On grid refresh, reset the dirty fields, so that the "Apply" button doesn't do anything
 
