@@ -5,7 +5,8 @@ module Netzke
   # Pretty much work in progress.
   class SearchPanel < FormPanel
     
-    CONDITIONS = [:COMPARISON_CONDITIONS, :WILDCARD_CONDITIONS, :BOOLEAN_CONDITIONS].inject([]){|r, c| r + Searchlogic::NamedScopes::Conditions.const_get(c).keys} # Something like [:equals, :greater_than_or_equal_to, :does_not_equal, :less_than, :less_than_or_equal_to, :greater_than, :ends_with, :like, :begins_with, :empty, :null]
+    # Something like [:equals, :greater_than_or_equal_to, :does_not_equal, :less_than, :less_than_or_equal_to, :greater_than, :ends_with, :like, :begins_with, :empty, :null]
+    CONDITIONS = [:COMPARISON_CONDITIONS, :WILDCARD_CONDITIONS, :BOOLEAN_CONDITIONS].inject([]){|r, c| r + Searchlogic::NamedScopes::Conditions.const_get(c).keys} 
     
     def default_config
       super.merge({
@@ -19,10 +20,13 @@ module Netzke
       res.map! do |f| 
         norm_column = normalize_column(f)
         norm_column.merge!({
-          :condition => "equals"
+          :condition => "like"
         })
-        norm_column.merge!(:hidden => true) if norm_column[:name].to_s.index("__") || norm_column[:xtype] == :xcheckbox
+        # norm_column.merge!(:hidden => true) if norm_column[:name].to_s.index("__") || norm_column[:xtype] == :xcheckbox
         
+        norm_column.merge!(:xtype => xtype_map[:string]) if norm_column[:name].to_s.index("__")
+        norm_column.merge!(:condition => "greater_than") if [:datetime, :integer, :date].include?(norm_column[:type])
+        norm_column.merge!(:condition => "equals") if [:boolean].include?(norm_column[:type])
         norm_column
       end
       
@@ -56,6 +60,12 @@ module Netzke
       column_name = params[:column]
       CONDITIONS.each { |c| column_name.sub!(/_#{c}$/, "") }
       super(:column => column_name)
+    end
+    
+    def xtype_map
+      super.merge({
+        :boolean => :tricheckbox
+      })
     end
     
   end
