@@ -1,4 +1,6 @@
 = v0.5.9 - EDGE
+* New: tri-state checkbox introduced into the search form
+* Impr: better defaults for the search form
 * Fix: GridPanel's "local filters" are back (they were out since the release of Ext 3.0)
 * Impr: obey "preloaded" option for tabs better: really add the widgets into their respective tabs from the start
 * Fix: datetime filters now also are take into account when searching in GridPanel is performed
